sass/_style.scss
/* ... */
@media #{$medium-and-down} {
  .github-commit {
    text-align: center;
  }
}

#github-button {
  transition: .25s ease;
  &:hover {
    background-color: rgba(0,0,0,.05);
  }
}

#download-button {
  background-color: color("materialize-red", "lighten-2");
  width: 260px;
  height: 70px;
  line-height: 70px;
  font-size: 18px;
  font-weight: 400;

  &:hover {
    background-color: lighten(color("materialize-red", "base"), 30%);
  }
}

.promo{
  width: 100%;

  i {
    margin: 40px 0;
    color: color("materialize-red", "lighten-2");
    font-size: 7rem;
    display: block;
  }
}

.promo-caption {
  font-size: 1.7rem;
  font-weight: 500;
  margin-top: 5px;
  margin-bottom: 0;

}

#front-page-nav {
  background-color: #FFF;
  position: relative;
  a {
      color: color("materialize-red", "lighten-2");
    }
  li {
    &:hover {
      background-color: color("materialize-red", "lighten-5");
    }
    &.active {
      background-color: color("materialize-red", "lighten-5");
    }
  }
  .container {
    height: inherit;
  }
}

// Grid doc styles

.col.grid-example {
  border: 1px solid #eee;
  margin: 7px 0;
  text-align: center;
  line-height: 50px;
  font-size: 28px;
  background-color: tomato;
  color: white;
  padding: 0;

  span {
    font-weight: 100;
    line-height: 50px;
  }
}

.promo-example {
  overflow: hidden;
}


/*******************
  Flat Site Mockup
*******************/

#site-layout-example-left {
  background-color: color("blue-grey", "lighten-2");
  height: 300px;
}
#site-layout-example-right {
  background-color: color("teal", "lighten-1");
  height: 300px;
}
#site-layout-example-top {
  background-color: color("red", "lighten-2");
  height: 42px;
}

.flat-text-header {
  height: 35px;
  width: 80%;
  background-color: rgba(255,255,255,.15);
  display: block;
  margin: 27px auto;
}
.flat-text {
  height: 25px;
  width: 80%;
  background-color: rgba(0,0,0,.15);
  display: block;
  margin: 27px auto;
  &.small {
    width: 25%;
    height: 25px;
    background-color: rgba(0,0,0,.15);
  }
  &.full-width {
    width: 100%;
  }
}

/**********************
**********************/

/*****************
  Chrome Browser
*****************/
$bottomColor: #E2E2E1;
$topColor: lighten($bottomColor, 2%);

$border: $bottomColor;

$width: 100%;
$height: auto;

.browser-window {
  text-align: left;
  width: $width;
  height: $height;
  display: inline-block;
  border-radius: 5px 5px 2px 2px;
  background-color: #fff;
  margin: 20px 0px;
  overflow: hidden;

    .top-bar {
    height: 30px;
    border-radius: 5px 5px 0 0;
    border-top: thin solid lighten($topColor, 1%);
    border-bottom: thin solid darken($bottomColor, 1%);
    background: linear-gradient($topColor, $bottomColor);
  }
}

.browser-window .circle {
  height: 10px;
  width: 10px;
  display: inline-block;
  border-radius: 50%;
  background-color: lighten($topColor, 10%);
  margin-right: 1px;
}
#close-circle {
  background-color: #FF5C5A;
}
#minimize-circle {
  background-color: #FFBB50;
}
#maximize-circle {
  background-color: #1BC656;
}
.browser-window .circles { margin: 5px 12px; }
.browser-window .content {
  margin: 0;
  width: 100%;
  // min-height: 100%;
  display: inline-block;
  border-radius: 0 0 5px 5px;
  background-color: #fafafa;
}
.browser-window .row {
  margin: 0;
}

.clear { clear: both; }

/**********************
**********************/


// Color Wheel
.dynamic-color {

  .red, .pink, .purple, .deep-purple, .indigo, .blue, .light-blue, .cyan, .teal, .green, .light-green, .lime, .yellow, .amber, .orange, .deep-orange, .brown , .grey,  .blue-grey, .black, .white, .transparent {
    height: 55px;
    width: 100%;
    padding: 0 15px;
    line-height: 55px;
    font-weight: 500;
    font-size: 12px;
    display: block;
    box-sizing: border-box;
  }
  .col {
    margin-bottom: 55px;
  }
}

.center {
  text-align: center;
  vertical-align: middle;
}

// Icons
.material-icons.icon-demo {
  line-height: 50px;
}
.icon-container i {
  font-size: 3em;
  margin-bottom: 10px;
}
.icon-container .icon-preview {
  height: 120px;
  text-align: center;
}
.icon-container span {
  display: block;
}

.icon-holder {
  display: block;
  text-align: center;
  width: 150px;
  height: 115px;

  float: left;
  margin: 0 0px 15px 0px;
  p {
    margin: 0 0;
  }
}

// tabs
.tabs-wrapper {
  position: relative;
  height: 48px;
  @extend .hide-on-small-only;

  .row.pinned {
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 10;
  }
}


// Tables
thead {
  color: rgba(0, 0, 0, .6);
}


// Shadow demo styling
.shadow-demo {
  background-color: color("teal", "lighten-1");
  width: 100px;
  height: 100px;
  margin: 20px auto;

  @media only screen and (max-width: $small-screen) {
    width: 150px;
    height: 150px;
  }
}

// parallax demo
.parallax-container {

  .text-center {
    position: absolute;
    top: 50%;
    left: 0;
    right: 0;
    margin-top: -27px;
  }

}

// Table of contents
ul.table-of-contents {
  margin-top: 0;
  padding-top: 48px;

  a {
    &.active {
      color: rgba(0,0,0,.8);
    }
    color: rgba(0,0,0,.55);
    font-weight: 400;
  }
}



// Prism Styling
code, pre {
  position: relative;
  font-size: 1.1rem;
}

.directory-markup {
  font-size: 1rem;
  line-height: 1.1rem !important;
}
:not(pre) > code[class*="language-"] {
  padding: .1em .25em;
  border: solid 1px rgba(51,51,51,0.12);
}

// Styles code blocks
pre[class*="language-"] {
  &:before {
    position: absolute;
    padding: 1px 5px;
    background: hsl(30, 10%, 90%);
    top: 0;
    left: 0;
    font-family: $font-stack;
    -webkit-font-smoothing: antialiased;
    color: #555;
    content:attr(class);
    font-size: .9rem;
    border: solid 1px rgba(51, 51, 51, 0.12);
    border-top: none;
    border-left: none;
  }
  padding: 25px 12px 7px 12px;
  border: solid 1px rgba(51, 51, 51, 0.12);
  background: rgba(246, 246, 246, .2);
}

pre[class*="language-"],
code[class*="language-"] {
  line-height: 1.3;
}
/* ... */

